@@ -6,6 +6,7 @@ DRAFT 0.4.1
 -----------
 
 * NEW: Added property `fdri:valueType` which can be used on a `schema:PropertyValue` to convey the datatype or class of the value of the property. (#23)
+* NEW: Allow property `prov:qualifiedAttribution` with range only `fdri:RelatedPartyAttribution` on `fdri:EnvironmentalMonitoringFacilityType`. This allows the capture of parties related to a category of facilities (e.g. the manufacturer of a type of sensor). (#4)
 
 DRAFT 0.4
 ---------
